--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+
     <application
             android:name=".App"
             android:allowBackup="true"
@@ -11,11 +12,11 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.NoActionBar">
         <activity
                 android:name=".bookOverview.CreateBookActivity"
                 android:label="@string/title_activity_create_book"
-                android:theme="@style/AppTheme.NoActionBar">
+                android:windowSoftInputMode="adjustResize">
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -24,6 +25,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <provider
+                android:name="androidx.core.content.FileProvider"
+                android:authorities="de.frejasundalexchat.dritterchat.fileprovider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths"></meta-data>
+        </provider>
     </application>
 
 </manifest>
