add edit screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme.NoActionBar">
         <activity
+                android:name=".editBook.EditBookActivity"
+                android:label="Edit book"
+                android:windowSoftInputMode="adjustResize">
+        </activity>
+        <activity
                 android:name=".bookOverview.CreateBookActivity"
                 android:label="@string/title_activity_create_book"
                 android:windowSoftInputMode="adjustResize">
